[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/gdscript_console/fonts/FiraCode-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://addons/gdscript_console/console.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=2]
size = 18
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=1]

[node name="Console" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
split_offset = 413
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Editor" type="TextEdit" parent="VSplitContainer"]
margin_right = 1024.0
margin_bottom = 413.0
mouse_filter = 1
custom_fonts/font = SubResource( 2 )
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
fold_gutter = true
highlight_all_occurrences = true

[node name="VBoxContainer" type="VBoxContainer" parent="VSplitContainer"]
margin_top = 425.0
margin_right = 1024.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="VSplitContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 29.0
mouse_filter = 1
custom_constants/margin_right = 20
custom_constants/margin_left = 20

[node name="HBoxContainer" type="HBoxContainer" parent="VSplitContainer/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 1004.0
margin_bottom = 29.0

[node name="Label" type="Label" parent="VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_top = 3.0
margin_right = 66.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 2 )
text = "OUTPUT"
align = 1

[node name="HSeparator" type="HSeparator" parent="VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 70.0
margin_right = 787.0
margin_bottom = 29.0
size_flags_horizontal = 3
custom_styles/separator = SubResource( 1 )

[node name="Run" type="Button" parent="VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 791.0
margin_right = 836.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "RUN"

[node name="Clear" type="Button" parent="VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
margin_left = 840.0
margin_right = 984.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 2 )
text = "CLEAR OUTPUT"

[node name="Result" type="TextEdit" parent="VSplitContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 1024.0
margin_bottom = 175.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
readonly = true
syntax_highlighting = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="request_completion" from="VSplitContainer/Editor" to="." method="_on_Editor_request_completion"]
[connection signal="text_changed" from="VSplitContainer/Editor" to="." method="_on_Editor_text_changed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer/Run" to="." method="_on_Run_pressed"]
[connection signal="pressed" from="VSplitContainer/VBoxContainer/MarginContainer/HBoxContainer/Clear" to="." method="_on_Clear_pressed"]
